--- a/index.html
+++ b/index.html
@@ -253,10 +253,10 @@
                 <div class="col-md-12">
                     <h1>My Story: COVID-19 Research</h1>
                     <div class="col-md-5">
-                      <p><br><img src="assets/img/lab-test.jpg" width="454" height="605"><br>Applying AptaFlow to a test sample. (To be replaced with something more exciting)</p>
+                      <p><br><img src="assets/img/lab-test.jpg" width="454" height="605"><br>Applying AptaFlow to a test sample. (To be replaced with a photo of me doing lab work!)</p>
                     </div>
                     <div class="col-md-7">
-                      <h4><p>Our lab investigates aptamers and applies them a range of fields, including cancer therapy and now COVID-19 diagnostics. Aptamers are short single-stranded DNA that can bind and recognize other molecules, such as cells and proteins. The aptamer's ability to bind is similar to protein antibodies, but aptamers are cheaper to manufacture and can withstand larger ranges in temperature, buffer, and other conditions. These are key features that can make an aptamer-based lateral flow test cheaper and more convenient to use. <strong>To develop these test strips, we enrich for and characterize aptamers that can bind the spike protein of SARS-CoV-2</strong>, the virus that causes COVID-19. Because SARS-CoV-2 research was very new at the time, we encountered many unexpected challenges while conducting the investigation, not to mention that I was new to the world of aptamers. For example, I encountered issues in the aptamer discovery process and nuances in the spike protein's structure. Despite this, I helped bring our research to fruition: Last summer, I co-authored our first publication on SARS-CoV-2 aptamers and presented my work at the 2021 Oligonucleotide Therapeutics Conference, which selected only five young scientist presenters in a competitive application process. <strong>Thanks to my persistence and adaptability, I've been able to find opportunities within obstacles and share my research with the scientific community.</strong> During this project, I also mentored UW bioengineering junior Joey to support my project and further his own research career. After I taught him key protocols, Joey was quickly able to conduct independent research and perform crucial experiments for SARS-CoV-2 aptamers. Joey and I still have more work ahead of us, but his efforts are already being recognized. Joey received the Mary Gates Research Scholarship this past quarter, and I'm proud to continue to cultivate his scientific abilities for months to come.</p></h4>
+                      <h4><p>At the Pun Lab, we're interested in applying aptamers, which are short single-stranded DNA that can bind proteins), to cancer therapeutics and also COVID-19 diagnostics. I spearhead the work on SARS-CoV-2-binding aptamers for lateral flow rapid tests! Despite starting late with my ___ For example, I encountered issues in the aptamer discovery process and nuances in the spike protein's structure. Despite this, I helped bring our research to fruition: Last summer, I co-authored our first publication on SARS-CoV-2 aptamers and presented my work at the 2021 Oligonucleotide Therapeutics Conference, which selected only five young scientist presenters in a competitive application process. <strong>Thanks to my persistence and adaptability, I've been able to find opportunities within obstacles and share my research with the scientific community.</strong> During this project, I also mentored UW bioengineering junior Joey to support my project and further his own research career. After I taught him key protocols, Joey was quickly able to conduct independent research and perform crucial experiments for SARS-CoV-2 aptamers. Joey and I still have more work ahead of us, but his efforts are already being recognized. Joey received the Mary Gates Research Scholarship this past quarter, and I'm proud to continue to cultivate his scientific abilities for months to come.</p></h4>
                     </div>
                 </div>
 
@@ -292,6 +292,7 @@
                     <p><br><img src="assets/img/shop2.jpg" width="605" height="454"><br>My artist booth at Seattle's Anthro Northwest 2019 convention</p>
                     </div>
                     <div class="col-md-12"><h4>
+
                     <p>My laser-cutting venture also helps fund my little brother Robin's husky experience. Robin is UW senior and his out-of-state tuition bill may put him in long-term debt. To help him choose his major without being influenced by monetary costs and parental pressure towards high-earning but incompatibile majors, I put the additional income towards Robin's needs. Since fall 2018 when we both started at UW, I paid for the majority of his expenses, including housing, utilities, and food. I'm proud that Robin will soon accomplish his goal of graduating in industrial design, and look forward to supporting his next dream.</p></h4>
                     </div>
                 </div>
@@ -323,7 +324,7 @@
                 <div class="col-md-12">
                     <h1>My Story: Kendo Club</h1>
                     <div class="col-md-5">
-                      <p><br><img src="assets/img/kendo-placeholder.jpg" width="454" height="605"><br>placeholder</p>
+                      <p><br><img src="assets/img/iaido-pose.jpg" width="400" height="600"><br>Practicing forms</p>
                     </div>
                     <div class="col-md-7">
                       <h4><p>My husky experience doesn’t end at the bioengineering department; I’m also deeply involved in two communities at UW, the Kendo Club and the competitive Pokémon scene. Kendo is a Japanese sword sparring martial art with deep roots in Japanese culture. It is just as much of a mental exercise as a physical one, as kendo students must show respect for their upperclassmen and teachers. This aspect is familiar to me and likely others who've studied Japanese language and culture. (connect to "inclusivity/cultural respect" criteria??) <br> At the Kendo Club, I give my support from within as a regular member. (I abstained from taking formal leadership positions because I feel strongly that undergraduates, not grad students, should lead and maintain their club culture and direction.) I attend practice consistently to show my support for the club, including near-perfect attendance during Zoom practices when the IMA was closed. I also contribute to small projects, such as making giveaway items for the Dawg Days booth, giving rides after practice, and editing photos for the club website. As someone who once led clubs as an undergrad, I felt that some of the best club supporters are people who help generously without being required by their leadership title. I hope to continue to be a pillar of support for the Kendo Club.
@@ -769,7 +770,7 @@
   
   var simulation = d3.forceSimulation()
     .force("link", d3.forceLink().id(function(d) { return d.id; }))
-    .force("charge", d3.forceManyBody().strength(-3000))
+    .force("charge", d3.forceManyBody().strength(-2000))
     .force("center", d3.forceCenter(width / 2, height / 2));
   
   var link = svg.append("g")
