--- a/index.html
+++ b/index.html
@@ -382,11 +382,12 @@
                       <img src="assets/img/pokemon-staff-santa-clara.jpg" width="400" height="192"><br>Staff photo for the 2019 Santa Clara Regionals <br>
                       <img src="assets/img/pokemon-staff-dallas.jpg" width="400" height="230"><br>Staff photo for the 2020 Dallas Regionals <br>
                       <img src="assets/img/pokemon-staff-pc4.png" width="400" height="208"><br>Staff "photo" for the 2021 Player's Cup IV
+                      <img src="assets/img/pokemon-university-lucy.png" width="400" height="226"><br>"Professor University" training video presented by me
                   </div>
                 <div class="col-md-7">
                   <h4><p>Thanks to my ample local experience, <strong>I'm an invited staff member for regional large tournaments in Portland, Anaheim, Dallas, and other major cities.</strong> These tournaments attract hundreds of Pok&eacute;mon players across the country vying for cash prizes, as well as a seasoned and diverse cast of Pok&eacute;mon Professors as staff members. I not only learned useful teamwork and communication skills working under others, but also led teams of judges as my reputation grew. Every event is an opportunity to foster the inclusive community and learn something new: I learned about a disabled player who needs a nurse to handle his cards, and I learned how to handle judge calls with non-English speakers while staffing the World Championships. I'm still growing as a judge, but with each event I hope to become a better Pok&eacute;mon volunteer.
                   <br><br>
-                  Although in-person event were and remain canceled due to COVID-19, I persisted in contributing to the community through virtual means. Due to my previous experience hosting Seattle events and volunteering at large tournaments, I was chosen to become a judge (and later, Head Judge) for the only official online Pok&eacute;mon circuit, the Player's Cup series. <strong>It was daunting to give orders to esteemed judges double or triple my age while also using four different programs to manage the event,</strong> but I performed so well that I was invited back to Head Judge the fourth and final Player's Cup. The community eagerly awaits in-person play, and I hope that my contributions at the bench in Foege can bring us a few steps closer to normal.</p></h4>
+                  Although in-person event were and remain canceled due to COVID-19, I persisted in contributing to the community through virtual means. Due to my previous experience hosting Seattle events and volunteering at large tournaments, I was chosen to become a judge (and later, Head Judge) for the only official online Pok&eacute;mon circuit, the Player's Cup series. <strong>It was daunting to give orders to esteemed judges double or triple my age while also using four different programs to manage the event,</strong> but I performed so well that I was invited back to Head Judge the fourth and final Player's Cup. Additionally, I created tutorial presentation videos for Professor University, the official platform for training new volunteer judges and organizers. I covered a wide variety of topics ranging from how to start a League to how to check player's card decks and virutal teams for tournament legality. I'm excited to see how my teaching videos can positively impact communities outside of my own.</p></h4>
                 </div>
               </div>
              </div>
@@ -496,7 +497,7 @@
       },
       {
         "id": 11,
-        "name": "designing LED-lit prop swords for costuming",
+        "name": "designing LED-lit prop swords",
         "color": "#e6f5c9"
       },
       {
@@ -526,7 +527,7 @@
       },
       {
         "id": 17,
-        "name": "presented in 7 official training videos (Pokémon University)",
+        "name": "presented in 7 official training videos (Professor University)",
         "color": "#fbb4ae"
       },
       {
@@ -536,7 +537,7 @@
       },
       {
         "id": 20,
-        "name": "crafting Dawg Daze freebies and generating graphics",
+        "name": "crafting Dawg Daze freebies and photoediting",
         "color": "#e6f5c9"
       },
       {
@@ -556,13 +557,18 @@
       },
       {
         "id": 24,
-        "name": "sewing and alterations for kendo uniforms and costuming",
+        "name": "sewing and alterations for kendo uniforms",
         "color": "#e6f5c9"
       },
       {
         "id": 25,
         "name": "laser-cutting mask accessory 'ear savers' for SPS co-workers",
         "color": "#e6f5c9"
+      },
+       {
+        "id": 26,
+        "name": "costuming and cosplay enthusiast",
+        "color": "#decbe4"
       },
     ],
     links : [
@@ -781,6 +787,14 @@
       {
         "source": 12,
         "target": 25
+      }, 
+       {
+        "source": 11,
+        "target": 26
+      },   
+      {
+        "source": 24,
+        "target": 26
       }, 
     ]
   }
