2/4 added end link at top bar

--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
                     </li>
                     <li><a href="#pokemon">5</a>
                     </li>
+                    <li><a href="#Parallax-seven">End</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
